test/parallel/forall/may-vs-must-par/stmt-mustpar-err-iter2SA.chpl
// forall-statement

use iters;

// error - leader is not provided
forall IND in zip(iter1SA(), iter2SA()) do
  writeln("forall IND in zip(iter1SA(), iter2SA())");
